--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -19,6 +19,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
+        <meta name="twitter:card" content="summary"></meta>
+
         {{#if favicon_svg}}
         <link rel="icon" href="{{ path_to_root }}favicon.svg">
         {{/if}}
